nats.loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-lb
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-tcp-idle-timeout: '10'
    service.beta.kubernetes.io/azure-load-balancer-resource-group: k8srg
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  loadBalancerIP: 13.82.110.54
  selector:
    app.kubernetes.io/name: nats
  ports:
    - protocol: TCP
      port: 4222
      targetPort: 4222
      name: client
