nginx.ingress-controller.yaml
kind: Service
apiVersion: v1
metadata:
  name: nats-service
spec:
  selector:
    name: my-nats-box-54c676d4fc-kb6b8
  ports:
    - protocol: TCP
      port: 4222
      nodePort: 32321
  type: NodePort
