nginx-ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: simple.synapacostam.tk
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: simple-web-6b4d5c54fc-qd8rd
                port:
                  number: 80
    - host: nats-gui.synapacostam.tk
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: my-nats
                port:
                  number: 8222
