traefik.nats-gui.ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nats-gui-subdomain
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nats-gui.synapacostam.tk`)
      kind: Rule
      services:
        - name: my-nats
          port: 8222
