traefik.simple.ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simple-subdomain
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`simple.synapacostam.tk`)
      kind: Rule
      services:
        - name: simple-web-6b4d5c54fc-qd8rd
          port: 80
additionalArguments:
  - '--accesslog=true'
  - '--accesslog.format=json'
  - '--log.level=DEBUG'
  - '--entrypoints.tcpep.address=:4222'
